# tau-supersymmetry-search

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dvc.yaml  eda.py  evaluate.py  evaluate_bdt.py  evaluate_dnn.py  feature_engineer.py  makefile  preprocess.py  pyproject.toml  regions.py  run.py  serve.py  train.py  train_bdt.py  train_dnn.py  tune.py
.github/workflows/: ci.yml
configs/: config.yaml
configs/data/: default.yaml
configs/features/: cc.yaml  ml.yaml  ntuples.yaml
configs/hydra/job_logging/: default.yaml
configs/merge/: default.yaml
configs/ml_regions/: default.yaml
configs/model/: dnn.yaml  xgboost.yaml
configs/pipeline/: default.yaml
configs/samples/: background.yaml  signal.yaml
configs/tuning/: default.yaml
notebooks/: 00_guide.ipynb  00_overview.ipynb  01_preprocessing.ipynb  02_feature_engineering.ipynb  03_EDA.ipynb  03_eda.ipynb  03b_hyperparameter_tuning.ipynb  04_hyperparameter_tuning.ipynb  04b_dnn_training.ipynb  05a_bdt_evaluation.ipynb  05a_bdt_training.ipynb  05b_dnn_evaluation.ipynb  05b_dnn_training.ipynb  06_ml_regions.ipynb  06a_bdt_evaluation.ipynb  06b_dnn_evaluation.ipynb  07_regions.ipynb
src/: utils.py
src/eda/: checks.py  plots.py  utils.py
src/models/: bdt.py  dnn.py  evaluation.py  plots.py  splits.py  tuning.py
src/pipelines/: eda.py  evaluate_bdt.py  evaluate_dnn.py  feature_engineer.py  preprocess.py  regions.py  serve.py  train_bdt.py  train_dnn.py  tune.py
src/processing/: analysis.py  features.py  io.py  merger.py  processor.py  rectangularizer.py  validation.py
src/regions/: construction.py  plots.py  significance.py
src/serving/: app.py  registry.py  schemas.py
src/visualization/: plots.py
tests/: conftest.py  test_config.py  test_evaluation.py  test_features.py  test_merger.py  test_models.py  test_rectangularizer.py  test_regions.py  test_serving.py  test_validation.py
