[project]
name = "tau-supersymmetry"
version = "0.1.0"
description = "Supersymmetry search with tau leptons in ATLAS data using ML for signal-background classification"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atlas-mpl-style>=0.25.0",
    "awkward>=2.9.0",
    "fastapi>=0.115.0",
    "hydra-core>=1.3.2",
    "joblib>=1.4.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "mlflow>=3.9.0",
    "numba>=0.60",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "optuna-integration>=4.7.0",
    "pandas>=2.3.3",
    "pandera>=0.23.0",
    "plotly>=6.5.2",
    "pyhf>=0.7.0",
    "pyrootutils>=1.0.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shap>=0.46.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "uproot>=5.7.1",
    "uvicorn[standard]>=0.34.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "dvc>=3.56.0",
    "httpx>=0.28.0",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.2",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["src/__init__.py", "src/*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "if __name__ == .__main__.",
    "pragma: no cover",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

# Strict checking for serving layer (cleanest module, most "industry")
[[tool.mypy.overrides]]
module = ["src.serving.*"]
disallow_untyped_defs = true
warn_return_any = true

# OmegaConf.to_container() returns a broad union type (dict | list | str |
# None) that triggers false positives on dict access patterns. These modules
# use Hydra configs extensively; runtime validation is handled by Hydra.
[[tool.mypy.overrides]]
module = [
    "src.processing.merger",
    "src.processing.features",
    "src.models.bdt",
]
disable_error_code = ["union-attr", "arg-type", "index", "call-overload", "assignment"]

# Heavy OmegaConf usage + PyTorch AMP compat imports + Optuna interactions
[[tool.mypy.overrides]]
module = ["src.models.tuning"]
disable_error_code = ["union-attr", "arg-type", "index", "call-overload", "assignment", "call-arg"]

# PyTorch AMP compatibility imports + OmegaConf config access
[[tool.mypy.overrides]]
module = ["src.models.dnn"]
disable_error_code = ["union-attr", "arg-type", "index", "call-overload", "assignment", "call-arg"]

# Matplotlib type stubs are stricter than the runtime API — lists are
# accepted for set_xlim/set_ylim but stubs require tuples.
[[tool.mypy.overrides]]
module = [
    "src.models.evaluation",
    "src.models.plots",
    "src.eda.plots",
    "src.regions.plots",
]
disable_error_code = ["arg-type", "attr-defined", "index", "union-attr"]

[tool.ruff]
extend-exclude = ["notebooks/*.ipynb"]
